# skills-test-with-actions

./: README.md  pyproject.toml
.github/steps/: 2-step.md  4-step.md
.github/workflows/: python-coverage.yml  python-publish.yml
tests/: calculations_test.py
