[build-system]
requires = ["setuptools>=65.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "skills-test-with-actions"
version = "0.1.0"
description = "A Python package with calculation utilities"
readme = "README.md"
license = {file = "LICENSE"}
authors = [
    {name = "Author Name", email = "author@example.com"}
]
requires-python = ">=3.8"
dependencies = []

[project.optional-dependencies]
test = ["pytest>=7.0", "pytest-cov>=4.0"]
dev = ["pytest>=7.0", "pytest-cov>=4.0"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--cov=src"
